...
    <string name="title_activity_add_entry">AddEntry</string>
    <string name="titleEntry">Title</string>
    <string name="usernameEntry">Username</string>
    <string name="passwordEntry">Password</string>
    <string name="urlEntry">URL</string>
    <string name="notesEntry">Notes</string>
    <string name="addEntryButton">Add Entry</string>
    <string name="logoutButton">Logout</string>
    <string name="myVaultText">My Vault</string>
    <string name="newEntryButtonDesc">Add a new entry</string>
    <string name="title_activity_entry_view">EntryView</string>
    <string name="delete_entry">Delete entry</string>
    <string name="editEntryButton">editEntryButton</string>
...
